--- a/particles_mobile/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/particles_mobile/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,7 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=/Users/raja/development/flutter
 FLUTTER_APPLICATION_PATH=/Users/raja/work/particles_flutter/particles_mobile
+FLUTTER_TARGET=/Users/raja/work/particles_flutter/particles_mobile/lib/main.dart
 FLUTTER_BUILD_DIR=build
 FLUTTER_FRAMEWORK_DIR=/Users/raja/development/flutter/bin/cache/artifacts/engine/darwin-x64
 FLUTTER_BUILD_NAME=1.0.0
