Added engine boundary options - bouncy and free

--- a/particles_flutter/example/pubspec.yaml
+++ b/particles_flutter/example/pubspec.yaml
@@ -20,6 +20,5 @@ flutter:
   assets:
     - assets/github.png
     - assets/pub.png
-    - assets/lexis.png
-    - assets/mittens.jpg
+    - assets/fug.png
 
